--- a/index.html
+++ b/index.html
@@ -1,268 +1,68 @@
 <!DOCTYPE html>
-<html lang="pt_BR" class="sr"><head>
-  <!-- PAGE INFO -->
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>beautysalon.</title>
+<html lang="pt_BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Meu nome</title>
 
-  <!--ICONES-->
-  <link rel="stylesheet" href="assets/fonts/style.css">
+    <link rel="stylesheet" href="style.css" />
 
-  <!-- Swiper -->
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-  <!-- STYLES -->
-  <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
 
-  <!--FONTS-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&amp;family=Poppins:wght@400;500;700&amp;display=swap" rel="stylesheet">
-</head>
-<body style="height: 100%;">
-  <!-- Estrutura mais semantica com header, main, section e footer.... Ajuda no SEO (Buscas do google e outros). Também ajudam as pessoas que precisam de acessibilidade -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <main>
+      <div class="container">
+        <div class="avatar">
+          <span>
+            <img src="images/build.svg" alt="Selo Rocketseat" />
+          </span>
+          <img
+            src="https://lorempixel.com/185/185/people/"
+            alt="Foto pessoal"
+            id="userImage"
+          />
+        </div>
+        <h1 id="userName">Meu nome</h1>
 
-  <!-- Quanto mais semantica mais a acessibilidade melhora-->
+        <a id="userLink" href="https://github.com/rafaelaraujosjdr">
+          <img src="images/github.svg" alt="Ícone github" />
+          <span id="userLogin">rafaelaraujosjdr</span>
+        </a>
+        <p id="userBio">Sou aluno (a) do curso de Web designer do Senac</p>
 
-  <header id="header">
-    <nav class="container">
-      <a class="logo" href="#">beauty<span>salon</span>.</a>
-
-      <!-- MENU -->
-      <div class="menu">
-        <ul class="grid">
-          <li>
-            <a class="title" href="#home">Início</a>
+        <ul id="socialLinks">
+          <li class="youtube">
+            <a href="https://youtube.com" target="_blank">
+              <img src="images/youtube.svg" alt="Ícone youtube" />
+            </a>
           </li>
-          <li>
-            <a class="title" href="#about">Sobre nós</a>
+          <li class="facebook">
+            <a href="https://facebook.com/" target="_blank">
+              <img src="images/facebook.svg" alt="Ícone facebook" />
+            </a>
           </li>
-          <li>
-            <a class="title" href="#service">Serviços</a>
+          <li class="instagram">
+            <a href="https://instagram.com" target="_blank">
+              <img src="images/instagram.svg" alt="Ícone instagram" />
+            </a>
           </li>
-          <li>
-            <a class="title" href="#testimonials">Depoimentos</a>
-          </li>
-          <li>
-            <a class="title" href="#contact">Contato</a>
+          <li class="twitter">
+            <a href="https://twitter.com" target="_blank">
+              <img src="images/twitter.svg" alt="Ícone twitter" />
+            </a>
           </li>
         </ul>
       </div>
-      <div>
-        <div class="toggle icon-menu"></div>
-        <div class="toggle icon-close"></div>
-      </div>
-    </nav>
-  </header>
+    </main>
 
-  <main>
-    <section class="section" id="home">
-      <div class="container grid">
-        <!-- alt caso a imagem não aparece, vai aparecer o titulo, ajuda na acessibilidade. Quando uma pessoa com deficiencia visual usar o recuso de leitura, o navegador vai ler o conteudo dentro do alt="" -->
-
-        <div class="image">
-          <img src="assets/image/imagem1.avif" alt="Mulher sorrindo com secador de cabelo e pentes na mão, penteando o cabelo de outra mulher">
-        </div>
-
-        <div class="text">
-          <h2 class="title">Saúde natural para os seus cabelos</h2>
-          <p>
-            Um salão exclusivo em São Paulo, especializado em tratamentos
-            naturais.
-          </p>
-          <a class="button" href="#">Agendar um horário</a>
-        </div>
-      </div>
-    </section>
-    <div class="divider-1"></div>
-
-    <section class="section" id="about">
-      <div class="container grid">
-        <div class="image">
-          <img src="assets/image/imagem2.avif" alt="3 cabelereiras fazendo pose com tesouras na mão e sorrindo.">
-        </div>
-
-        <div class="text">
-          <h2 class="title">Sobre nós</h2>
-
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Necessitatibus deleniti perferendis vel molestiae soluta, quaerat
-            beatae dicta ducimus praesentium architecto harum dolorum
-            distinctio illo earum assumenda itaque. Omnis, quam repellat.
-          </p>
-          <br>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Necessitatibus deleniti perferendis vel molestiae soluta, quaerat
-            beatae dicta ducimus praesentium architecto harum dolorum
-            distinctio illo earum assumenda itaque. Omnis, quam repellat.
-          </p>
-          <br>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Necessitatibus deleniti perferendis vel molestiae soluta, quaerat
-            beatae dicta ducimus praesentium architecto harum dolorum
-            distinctio illo earum assumenda itaque. Omnis, quam repellat.
-          </p>
-        </div>
-      </div>
-    </section>
-    <div class="divider-2"></div>
-
-    <section class="section" id="service">
-      <div class="container grid">
-        <header>
-          <h2 class="title">Serviços</h2>
-          <p class="subtitle">
-            Com mais de 10 anos no mercado, o
-            <strong>Beautysalon</strong> já conquistou clientes de inúmeros
-            países com seus tratamentos exclusivos e totalmente naturais
-          </p>
-        </header>
-        <div class="cards grid">
-          <div class="card">
-            <i class="icon-woman-hair"></i>
-            <h3 class="title">Terapia capilar</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius,
-              nam unde deleniti in tempora quidem dolores perspiciatis eveniet
-              dolore molestiae esse maxime ducimus sapiente eum! Minima
-              repellat deserunt hic provident?
-            </p>
-          </div>
-          <div class="card">
-            <i class="icon-trim"></i>
-            <h3 class="title">Cortes</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius,
-              nam unde deleniti in tempora quidem dolores perspiciatis eveniet
-              dolore molestiae esse maxime ducimus sapiente eum! Minima
-              repellat deserunt hic provident?
-            </p>
-          </div>
-          <div class="card">
-            <i class="icon-cosmetic"></i>
-            <h3 class="title">Tratamentos</h3>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius,
-              nam unde deleniti in tempora quidem dolores perspiciatis eveniet
-              dolore molestiae esse maxime ducimus sapiente eum! Minima
-              repellat deserunt hic provident?
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <div class="divider-1"></div>
-
-    <section class="section" id="testimonials">
-      <div class="container swiper">
-        <header>
-          <h2 class="title">Depoimentos de quem já passou por aqui</h2>
-        </header>
-        <div class="testimonials swiper-container">
-          <div class="swiper-wrapper">
-            <div class="testimonials swiper-slide">
-              <blockquote>
-                <p>
-                  <span>“</span>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Rerum blanditiis saepe nam excepturi explicabo ipsa error
-                  ipsam neque
-                </p>
-                <cite>
-                  <img src="assets/fotos/10.jpg" alt="Foto de Wanessa Souza">
-                  Wanessa Souza
-                </cite>
-              </blockquote>
-            </div>
-            <div class="testimonials swiper-slide">
-              <blockquote>
-                <p>
-                  <span>“</span>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Rerum blanditiis saepe nam excepturi explicabo ipsa error
-                  ipsam neque
-                </p>
-                <cite>
-                  <img src="assets/fotos/10.jpg" alt="Foto de Franciele Venega">
-                  Franciele Venega
-                </cite>
-              </blockquote>
-            </div>
-            <div class="testimonials swiper-slide">
-              <blockquote>
-                <p>
-                  <span>“</span>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Rerum blanditiis saepe nam excepturi explicabo ipsa error
-                  ipsam neque
-                </p>
-                <cite>
-                  <img src="assets/fotos/10.jpg" alt="Foto de Valeska Fabris">
-                  Valeska Fabris
-                </cite>
-              </blockquote>
-            </div>
-          </div>
-          <!-- If we need pagination -->
-          <div class="swiper-pagination"></div>
-        </div>
-      </div>
-    </section>
-
-    <div class="divider-2"></div>
-
-    <section class="section" id="contact">
-      <div class="container grid">
-        <div class="text">
-          <h2 class="title">Entre em contato com a gente!</h2>
-          <p>
-            Entre em contato com a Beautysalon, queremos tirar suas dúvidas,
-            ouvir suas críticas e sugestões.
-          </p>
-          <a href="https://api.whatsapp.com/send?phone=+5532999999999&amp;text=Oi! Gostaria de agendar um horário" class="button" target="_blank"><i class="icon-whatsapp"> </i>Entrar em contato</a>
-        </div>
-
-        <div class="links">
-          <ul class="grid">
-            <li><i class="icon-phone"></i>32 99999-9999</li>
-            <li><i class="icon-map-pin"></i> R. Minha rua, 2022</li>
-            <li><i class="icon-mail"></i> contato@beautysalon.com</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-    <div class="divider-1"></div>
-  </main>
-  <footer class="section">
-    <div class="container grid">
-      <div class="brand">
-        <a class="logo logo-alt" href="#home">beauty<span>salon</span>.</a>
-        <p>@2022 Beautysalon.</p>
-        <p>Todos os direitos reservados.</p>
-      </div>
-      <div class="social">
-        <a href="https://www.instagram.com/" target="_blank"><i class="icon-instagram"></i></a>
-        <a href="https://www.facebook.com/" target="_blank"><i class="icon-facebook"></i></a>
-        <a href="https://www.youtube.com/" target="_blank"><i class="icon-youtube"></i></a>
-      </div>
-    </div>
-  </footer>
-
-  <a href="#home" class="back-to-top"><i><div class="icon-arrow-up"></div></i></a>
-
-  <!-- swiper -->
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-  <!-- scrollreveal -->
-
-  <script src="https://unpkg.com/scrollreveal"></script>
-
-  <!-- main.js -->
-
-  <script src="main.js"></script>
-
-
-</body></html>
+    <script src="main.js"></script>
+  </body>
+</html>
